--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "scripts": {
     "start": "vite",
-    "dev": "vite --host",
+    "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview --host"
   },
   "license": "MIT",
   "devDependencies": {
