--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview --host"
+    "start": "vite preview --host"
   },
   "license": "MIT",
   "devDependencies": {
@@ -20,6 +19,7 @@
   "dependencies": {
     "date-fns": "^2.29.3",
     "firebase": "^9.18.0",
+    "pnpm": "^8.6.2",
     "solid-firebase": "^0.1.7",
     "solid-icons": "^1.0.4",
     "solid-js": "^1.6.10"
